@@ -6,6 +6,7 @@ import com.google.gson.GsonBuilder;
 import com.google.gson.annotations.Expose;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
+import org.bukkit.block.data.BlockData;
 import org.bukkit.util.Vector;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -16,11 +17,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-/**
- * Default {@link Schematic} implementation.
- * Starting from the minimum location, the blocks are concatenated into a string, until the maximum location is reached.
- * Each block is represented by a character. This character refers to a specific index in the palette.
- */
 public class JsonSchematic implements FileType {
 
     private static final int START = '#';
@@ -49,14 +45,12 @@ public class JsonSchematic implements FileType {
     private Map<String, List<String>> waypoints;
 
     public JsonSchematic() {
-
     }
 
     public JsonSchematic(
             int dataVersion, String minecraftVersion,
             List<Integer> dimensions, List<String> palette,
-            String blocks
-    ) {
+            String blocks) {
         this.dataVersion = dataVersion;
         this.minecraftVersion = minecraftVersion;
         this.dimensions = dimensions;
@@ -68,8 +62,7 @@ public class JsonSchematic implements FileType {
     public JsonSchematic(
             int dataVersion, String minecraftVersion,
             List<Integer> dimensions, List<String> palette,
-            String blocks, Map<String, List<String>> waypoints
-    ) {
+            String blocks, Map<String, List<String>> waypoints) {
         this.dataVersion = dataVersion;
         this.minecraftVersion = minecraftVersion;
         this.dimensions = dimensions;
@@ -83,15 +76,16 @@ public class JsonSchematic implements FileType {
         Preconditions.checkNotNull(schematic, "Schematic is null");
         Preconditions.checkNotNull(file, "File is null");
 
-        var dimensionVector = schematic.getDimensions().subtract(new Vector(1, 1, 1));
-        var dimensions = List.of(dimensionVector.getBlockX(), dimensionVector.getBlockY(), dimensionVector.getBlockZ());
-        var palette = schematic.getPalette().stream().map(it -> it.getAsString(true)).toList();
-        var serializedBlocks = String.join("", schematic.getBlocks().stream().map(this::getChar).toList());
-        var waypoints = schematic.getWaypoints().entrySet().stream()
+        Vector dimensionVector = schematic.getDimensions().subtract(new Vector(1, 1, 1));
+        List<Integer> dimensions = List.of(dimensionVector.getBlockX(), dimensionVector.getBlockY(), dimensionVector.getBlockZ());
+        List<String> palette = schematic.getPalette().stream().map(it -> it.getAsString(true)).collect(Collectors.toList());
+        String serializedBlocks = String.join("", schematic.getBlocks().stream().map(this::getChar).collect(Collectors.toList()));
+        Map<String, List<String>> waypoints = schematic.getWaypoints().entrySet().stream()
                 .collect(Collectors.toMap(Map.Entry::getKey, entry -> entry.getValue().stream()
-                        .map(it -> it.getX() + "," + it.getY() + "," + it.getZ() + "," + it.getYaw() + "," + it.getPitch()).toList()));
+                        .map(it -> it.getX() + "," + it.getY() + "," + it.getZ() + "," + it.getYaw() + "," + it.getPitch())
+                        .collect(Collectors.toList())));
 
-        var jsonSchematic = new JsonSchematic(schematic.getDataVersion(), schematic.getMinecraftVersion(),
+        JsonSchematic jsonSchematic = new JsonSchematic(schematic.getDataVersion(), schematic.getMinecraftVersion(),
                 dimensions, palette, serializedBlocks, waypoints);
 
         try {
@@ -104,9 +98,8 @@ public class JsonSchematic implements FileType {
     }
 
     void write(File file, JsonSchematic type) throws IOException {
-        try (var writer = new BufferedWriter(new FileWriter(file))) {
+        try (BufferedWriter writer = new BufferedWriter(new FileWriter(file))) {
             GSON.toJson(type, writer);
-
             writer.flush();
         }
     }
@@ -118,19 +111,26 @@ public class JsonSchematic implements FileType {
         Preconditions.checkArgument(file.exists(), "File does not exist");
 
         try {
-            var serialized = read(file);
+            JsonSchematic serialized = read(file);
 
-            var dataVersion = serialized.dataVersion;
-            var mcVersion = serialized.minecraftVersion;
-            var unparsedPalette = serialized.palette;
+            int dataVersion = serialized.dataVersion;
+            String mcVersion = serialized.minecraftVersion;
+            List<String> unparsedPalette = serialized.palette;
 
-            var palette = unparsedPalette.stream().map(Bukkit::createBlockData).toList();
-            var dimensions = new Vector(serialized.dimensions.get(0),
+            List<BlockData> palette = unparsedPalette.stream()
+                    .map(data -> (BlockData) Bukkit.createBlockData(data))
+                    .collect(Collectors.toList());
+
+            Vector dimensions = new Vector(serialized.dimensions.get(0),
                     serialized.dimensions.get(1),
                     serialized.dimensions.get(2));
-            var blocks = serialized.blocks.chars().mapToObj(c -> fromChar((char) c)).toList();
 
-            var waypoints = new HashMap<String, List<Location>>();
+            List<Short> blocks = serialized.blocks.chars()
+                    .mapToObj(c -> fromChar((char) c))
+                    .map(Short::valueOf)
+                    .collect(Collectors.toList());
+
+            Map<String, List<Location>> waypoints = new HashMap<>();
             if (dataVersion >= 2) {
                 serialized.waypoints.forEach((key, locations) ->
                         waypoints.put(key, locations.stream()
@@ -140,23 +140,22 @@ public class JsonSchematic implements FileType {
                                         Double.parseDouble(it[2]),
                                         Float.parseFloat(it[3]),
                                         Float.parseFloat(it[4])))
-                                .toList()));
+                                .collect(Collectors.toList())));
             }
 
-            return new Schematic(Schematic.DATA_VERSION, mcVersion, dimensions,
-                    palette, blocks, waypoints);
+            return new Schematic(dataVersion, mcVersion, dimensions, palette, blocks, waypoints);
+
         } catch (IOException e) {
             return null;
         }
     }
 
     JsonSchematic read(File file) throws IOException {
-        try (var reader = new BufferedReader(new FileReader(file))) {
+        try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
             return GSON.fromJson(reader, JsonSchematic.class);
         }
     }
 
-    // avoids control chars
     String getChar(short id) {
         return chars.computeIfAbsent(id, it -> {
             do {
@@ -169,9 +168,9 @@ public class JsonSchematic implements FileType {
 
     short fromChar(char c) {
         return controls.computeIfAbsent(c, it -> {
-            var controlSince = 0;
+            int controlSince = 0;
 
-            for (var i = START; i < c; i++) {
+            for (int i = START; i < c; i++) {
                 if (Character.isISOControl(i)) {
                     controlSince++;
                 }
